# automated-content-optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  test.yml
.huggingface/: README.md  space.yml
api/: __init__.py  main.py
api/middleware/: auth.py  rate_limiting.py
api/models/: content.py  user.py
api/routers/: optimization.py
app/: main.py
config/: multimodal_config.py
core/geo/: optimizer.py
core/seo/: seo_optimizer.py
database/: __init__.py  models.py
docs/: audio-processing.md  content-optimization.md  contributing.md  index.md  installation.md  openapi.yaml  quickstart.md  video-processing.md
docs/api/: audio.md  cli.md  config.md  optimizer.md  testing.md  video.md  web.md
metrics/: metrics_20250615.json  metrics_20250616.json  metrics_20250617.json
scripts/: generate_keys.py
secrets/: README.md
site/: 404.html  index.html  objects.inv
site/contributing/: index.html
site/search/: search_index.json
src/: main.py  main_simple.py
src/api/: docs.py
src/config/: multimodal_config.py
src/core/: ai_simulator.py  analytics_manager.py  content_processor.py  content_processor_simple.py  distribution_manager.py  entity_extractor.py  geo_optimizer.py  schema_generator.py  seo_optimizer.py
src/core/processors/: audio_processor.py  video_processor.py
src/middleware/: security.py
src/optimizer/: __init__.py  __init__.pyi
src/routers/: __init__.py  analytics.py  content.py  distribution.py
src/utils/: error_handler.py  logging_config.py  monitoring.py
static/: index.html
static/css/: styles.css
static/js/: main.js
tests/: __init__.py  conftest.py  test_analytics_manager.py  test_api.py  test_api_integration.py  test_core.py  test_error_handler.py  test_geo_optimizer.py  test_main.py  test_performance.py  test_seo_optimizer.py
tests/unit/: test_api.py  test_api_integration.py  test_basic.py  test_content_processor.py  test_core_simple.py  test_geo_optimizer.py  test_main.py  test_multimodal_processor.py  test_processors.py  test_seo_optimizer.py  test_simple.py
ui/: app.py
